# ya_robot_manipulator

./: .gitignore  CLAUDE.md  README.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
docs/: TESTING_WITH_RQT.md  architecture-epic7-hardware-interface.md  architecture-ros2-control-v2-CORRECTIONS.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-11-25.md  manipulator_description_package_overview.md  migration-forward-to-trajectory-controllers.md  prd-architecture-validation.md  prd.md  tech-spec-hardware-interface.md  validation-report-2025-11-25_13-04-45.md  validation-report-epic7-architecture-2025-11-27.md
docs/report/: отчет-о-выполненных-работах-09-12-2025.md  отчет-о-выполненных-работах.md  план-работ-на-неделю-09-12-2025.md  план-работ-на-неделю.md
docs/sprint-artifacts/: 1-1-create-ros2-package-structure.context.xml  1-1-create-ros2-package-structure.md  1-2-define-all-action-interfaces.context.xml  1-2-define-all-action-interfaces.md  1-3-define-service-and-message-interfaces.context.xml  1-3-define-service-and-message-interfaces.md  2-1-implement-virtual-limit-switch-simulation.context.xml  2-1-implement-virtual-limit-switch-simulation.md  2-2-create-controller-interface-utility.context.xml  2-2-create-controller-interface-utility.md  2-3-1-migrate-motion-joints-to-trajectory-controller.context.xml  2-3-1-migrate-motion-joints-to-trajectory-controller.md  2-3-2-update-joy-control-for-trajectory-controllers.context.xml  2-3-2-update-joy-control-for-trajectory-controllers.md  2-3-implement-movejoint-action-server.context.xml  2-3-implement-movejoint-action-server.md  2-4-implement-state-marker-publisher-for-visualization.context.xml  2-4-implement-state-marker-publisher-for-visualization.md  2-5-implement-movejointgroup-action-server.context.xml  2-5-implement-movejointgroup-action-server.md  2-6-create-test-script-and-rqt-documentation.context.xml  2-6-create-test-script-and-rqt-documentation.md  3-1-implement-address-resolver-utility.context.xml  3-1-implement-address-resolver-utility.md  3-2-implement-getaddresscoordinates-service.context.xml  3-2-implement-getaddresscoordinates-service.md  3-3-implement-movejointgroup-with-joint-groups-configuration.context.xml  3-3-implement-movejointgroup-with-joint-groups-configuration.md  3-4-implement-navigatetoaddress-action-server.context.xml  3-4-implement-navigatetoaddress-action-server.md  3-5-add-address-state-markers-to-visualization.context.xml  3-5-add-address-state-markers-to-visualization.md  3-6-create-navigation-test-suite.context.xml  3-6-create-navigation-test-suite.md  (+18 more)
firmware/: CMakeLists.txt
firmware/main/: main.c
install/: local_setup.sh  setup.sh
ros2_ws/: frames_2025-12-04_12.20.22.gv  frames_2025-12-04_14.20.47.gv  frames_2025-12-08_13.15.47.gv  frames_2025-12-08_13.16.07.gv  test_all_controllers.sh  test_picker_vertical.sh
ros2_ws/src/joy_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/joy_control/config/: manipulator_joy_config.yaml
ros2_ws/src/joy_control/docs/: CONTROLLER_LAYOUT.md  DEBUGGING.md  JOYSTICK_FIXES.md  QUICK_START.md
ros2_ws/src/joy_control/launch/: joy_control.launch.py
ros2_ws/src/joy_control/scripts/: debug_joy_control.py  joy_controller_node.py  test_joy_axes.py
ros2_ws/src/manipulator_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/manipulator_control/action/: ExtractBox.action  GetContainer.action  ManipulateContainer.action  MoveBoxToLoad.action  MoveJoint.action  MoveJointGroup.action  NavigateToAddress.action  PickItem.action  PickItemFromStorage.action  PlaceContainer.action  PutBox.action  ReturnBox.action
ros2_ws/src/manipulator_control/config/: action_servers.yaml  box_spawner.yaml  electromagnet.yaml  extraction_trajectories.yaml  kinematic_chains.yaml  limit_switches.yaml  manipulator_dev.perspective  state_markers.yaml  trajectory_config.yaml
ros2_ws/src/manipulator_control/launch/: manipulator_simulation.launch.py  virtual_limit_switches.launch.py
ros2_ws/src/manipulator_control/manipulator_control/: address_resolver.py  address_service_node.py
ros2_ws/src/manipulator_control/manipulator_utils/: __init__.py  address_resolver.py
ros2_ws/src/manipulator_control/msg/: Address.msg  JointCommand.msg  LimitSwitchState.msg
ros2_ws/src/manipulator_control/scripts/: svg_to_trajectory.py  test_box_operation_sequence.py  test_controller_interface_manual.py  test_move_joint_action.py  test_trajectory_execution.py  test_trajectory_with_markers.py  trajectory_marker_publisher.py  visualize_trajectory.py
ros2_ws/src/manipulator_control/src/: box_spawn_manager_node.py  controller_interface.py  electromagnet_simulator_node.py  move_joint_group_server.py  move_joint_server.py  navigate_to_address_server.py  state_marker_publisher.py  virtual_limit_switches.py
ros2_ws/src/manipulator_control/src/utils/: __init__.py  box_urdf_generator.py  yz_trajectory_generator.py
ros2_ws/src/manipulator_control/srv/: DespawnBox.srv  GetAddressCoordinates.srv  SpawnBox.srv  ToggleElectromagnet.srv  ValidateAddress.srv
ros2_ws/src/manipulator_control/test/: test_address_resolver.py  test_address_service.py  test_address_state_markers.py  test_controller_interface.py  test_epic2_joint_control.py  test_epic3_navigation.py  test_move_joint_group.py  test_navigate_to_address.py  test_svg_to_trajectory.py  test_yz_trajectory_gazebo.py  test_yz_trajectory_generator.py
ros2_ws/src/manipulator_hardware/: manipulator_hardware.xml  package.xml  setup.cfg  setup.py
ros2_ws/src/manipulator_hardware/config/: hardware_config.yaml
ros2_ws/src/manipulator_hardware/manipulator_hardware/: __init__.py  modbus_driver.py  modbus_hardware_interface.py
ros2_ws/src/manipulator_hardware/scripts/: test_hardware_interface.py
ros2_ws/src/manipulator_hardware/test/: test_modbus_driver.py  test_modbus_hardware_interface.py
shared/: hardware_config.yaml
trash/: architecture-ros2-control.md  manipulator_description.md  research-technical-2025-11-22.md  storage-spec-v2-1.md
(+128 files in other folders)
