<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_hardware</name>
  <version>0.0.1</version>
  <description>Hardware interface package for ya_robot_manipulator with Modbus RTU communication</description>
  <maintainer email="barabashsr@gmail.com">robo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>hardware_interface</depend>

  <!-- pip dependency for Modbus communication -->
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <hardware_interface plugin="${prefix}/manipulator_hardware.xml"/>
  </export>
</package>
